--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    sourceSets {
+        test.resources.srcDirs += 'src/test/res'
+    }
 }
 
 dependencies {
@@ -39,7 +42,28 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.test:core-ktx:1.3.0'
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+
+
+    def junitVersion = '4.13.1'
+    // Dependencies for local unit tests
+    testImplementation "junit:junit:$junitVersion"
+
+    def hamcrestVersion = '1.3'
+    testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
+
+    def archTestingVersion = '2.1.0'
+    testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
+    def robolectricVersion = '4.5.1'
+    testImplementation "org.robolectric:robolectric:$robolectricVersion"
+
+    // AndroidX Test - JVM testing
+    def androidXTestCoreVersion = '1.3.0'
+    def androidXTestExtKotlinRunnerVersion = '1.1.2'
+    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
+    testImplementation "androidx.test.ext:junit:$androidXTestExtKotlinRunnerVersion"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
